# nba-agent

./: .env.example  .gitignore  .vercelignore  LICENSE  README.md  agent_service.py  config.py  main.py  package.json  prompts.py  pyproject.toml  requirements.txt  start.sh  start_prod.sh  tools.py  vercel.json
api/: agent_service.py  config.py  index.py  main_app.py  prompts.py  tools.py  utils.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx  index.css
tests/: test_e2e.py  test_tools.py  test_utils.py
